# deep-rust

./: .env.example  .gitignore  Cargo.toml  README.md
examples/anyhow-error-response/: Cargo.toml
examples/anyhow-error-response/src/: main.rs
examples/askama-templates/: Cargo.toml
examples/askama-templates/src/: main.rs
examples/askama-templates/templates/: home.html  layout.html
examples/auto-reload/: Cargo.toml
examples/auto-reload/src/: main.rs
examples/chat/: Cargo.toml  index.html
examples/chat/src/: main.rs
examples/custom-deserializer/: Cargo.toml
examples/custom-deserializer/src/: main.rs
examples/deep-axum/: Cargo.toml
examples/deep-axum/src/: main.rs
examples/deep-axum/src/extractors/: mod.rs
examples/deep-axum/src/services/: mod.rs
examples/dependency-injection/: Cargo.toml
examples/dependency-injection/src/: main.rs
examples/diesel-async-postgres/: Cargo.toml  postgres.sh
examples/diesel-async-postgres/migrations/2025-03-05-100228_create_posts/: up.sql
examples/diesel-async-postgres/src/: config.rs  main.rs  models.rs
examples/error-handling/: Cargo.toml
examples/error-handling/src/: main.rs
examples/http-proxy/: Cargo.toml
examples/http-proxy/src/: main.rs
examples/jwt/: Cargo.toml
examples/jwt/src/: main.rs
examples/key-value-store/: Cargo.toml
examples/key-value-store/src/: main.rs
examples/low-level-native-tls/: Cargo.toml
examples/low-level-native-tls/src/: main.rs
examples/minijinja-templates/: Cargo.toml
examples/minijinja-templates/src/: main.rs
examples/minijinja-templates/templates/: about.jinja  content.jinja  home.jinja  layout.jinja
examples/mongodb/: Cargo.toml  docker-compose.yml
examples/mongodb/src/: main.rs
examples/multipart/: Cargo.toml
examples/multipart/src/: main.rs
examples/oauth/: .env.example  Cargo.toml
examples/oauth/src/: main.rs
examples/print-request-response/: Cargo.toml
examples/print-request-response/src/: main.rs
examples/prometheus-metrics/: Cargo.toml
examples/prometheus-metrics/src/: main.rs
examples/reqwest-response/: Cargo.toml
examples/reqwest-response/src/: main.rs
examples/reverse-proxy/: Cargo.toml
examples/reverse-proxy/src/: main.rs
examples/sqlx-postgres/: Cargo.toml  postgres.sh
examples/sqlx-postgres/src/: main.rs
examples/sse/: Cargo.toml
examples/sse/assets/: index.html  index.js
examples/sse/src/: main.rs
examples/websockets/: Cargo.toml
examples/websockets/assets/: index.html
examples/websockets/src/: main.rs
