[package]
name = "http-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.1"
tower = { version = "0.5.2", features = ["make", "full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }