[package]
name = "jwt"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = { version = "0.5.2", features = ["timeout"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }