[package]
name = "example-mongodb"
version.workspace = true
edition.workspace = true

[dependencies]
dotenv = "0.15.0"
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
mongodb = { version = "3.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

