[package]
name = "multipart"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6.2", features = ["limit", "trace"] }
tower = { version = "0.5.2" }
