[package]
name = "reqwest-response"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.1", features = ["trace"] }
reqwest = { version = "0.12.5", features = ["stream"] }
tokio-stream = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
