[package]
name = "sqlx-postgres"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = "0.15.0"
