[package]
name = "sse"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { workspace = true }
futures = "0.3"
headers = "0.4"
tokio-stream = "0.1"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = "0.33.1"

[dev-dependencies]
eventsource-stream = "0.2"
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
