[package]
name = "websockets"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6.2", features = ["fs"] }
futures = "0.3"